# Depot

./: .gitlab-ci.yml  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  meson.build  meson_options.txt
contrib/: README.md  depot.toml  user.depot.toml.example
contrib/depot.d/: build.toml  package.toml  repos.toml
man/: depot.1
src/: bootstrap.rs  build_options.rs  cli.rs  cli_assets.rs  commands.rs  config.rs  cross.rs  deps.rs  fakeroot.rs  fakeroot_preload.c  fs_copy.rs  hex.rs  index.rs  interrupts.rs  locking.rs  main.rs  metadata_time.rs  planner.rs  runtime_env.rs  shell_helpers.rs  signing.rs  system_state.rs  test_support.rs  ui.rs
src/builder/: autotools.rs  bin.rs  cmake.rs  custom.rs  dkms.rs  makefile.rs  meson.rs  mod.rs  perl.rs  python.rs  rust.rs  state.rs  tests.rs
src/builder/autotools/: tests.rs
src/builder/cmake/: tests.rs
src/builder/meson/: tests.rs
src/commands/: build_cmd.rs  check.rs  direct_install.rs  install_cmd.rs  install_plan.rs  install_transaction.rs  misc.rs  repo.rs  set.rs  tests.rs  update.rs
src/commands/build_cmd/: support.rs
src/commands/install_cmd/: archive.rs
src/commands/misc/: internal.rs
src/commands/repo/: config.rs  groups.rs  search.rs
src/commands/tests/: build_cases.rs  cli_cases.rs  install_cases.rs  update_cases.rs  version_cases.rs
src/commands/update/: candidates.rs  check.rs  versions.rs
src/db/: mod.rs  repo.rs  tests.rs
src/db/repo/: archive.rs  fetch.rs  manager.rs  mirrors.rs  query.rs  tests.rs
src/install/: dkms.rs  hooks.rs  mod.rs  scripts.rs
src/install/scripts/: tests.rs
src/package/: interactive.rs  mod.rs  packager.rs  spec.rs  starbuild.rs
src/package/interactive/: tests.rs
src/package/spec/: config.rs  loading.rs  mod.rs  model.rs  tests.rs
src/package/spec/tests/: build_config_cases.rs  package_cases.rs  source_cases.rs  validation_cases.rs
src/package/starbuild/: tests.rs
src/planner/: tests.rs
src/source/: extractor.rs  fetcher.rs  git.rs  hooks.rs  mod.rs  tests.rs
src/source/extractor/: tests.rs
src/source/git/: tests.rs
src/staging/: manifest.rs  mod.rs  tests.rs  transaction.rs
tools/meson/: cargo-build.sh  cargo-test.sh  install-cli-assets.sh
