[package]
name = "depot"
version = "0.36.0"
edition = "2024"

[lints.rust]
warnings = "deny"

[dependencies]
anyhow = "1.0.102"
ar = "0.9.0"
bzip2 = "0.6.1"
clap = { version = "4.6.0", features = ["derive"] }
flate2 = "1.1.9"
git2 = "0.20.4"
indicatif = "0.18.4"
nix = { version = "0.31.3", features = ["user"] }
rusqlite = "0.39.0"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
yaml-rust2 = "0.11.0"
sha2 = "0.11.0"
tar = "0.4.45"
tempfile = "=3.27.0"
thiserror = "2.0.18"
toml = "1.1.2"
url = "2.5.8"
walkdir = "2.5.0"
xz2 = "0.1.7"
zip = "8.5.0"
zstd = { version = "0.13.3", features = ["zstdmt"] }
inquire = "0.9.4"
md5 = "0.8.0"
suppaftp = "8.0.2"
minisign = "0.9.1"
petgraph = "0.8.3"
fd-lock = "4.0.4"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "native-tls"] }
filetime = "0.2.29"
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
sys-mount = { version = "3.1.0", default-features = false }
time = { version = "0.3.47", features = ["formatting", "parsing"] }
b2sum-rust = "0.3.0"
serde_ignored = "0.1.14"
lz4_flex = "0.13.1"
lzma-rust2 = "0.16.2"
signal-hook = "0.4.4"
sha1 = "0.11.0"
pdf-extract = "0.10.0"

[dev-dependencies]
tempfile = "=3.27.0"
