[package]
name = "depot"
version = "0.60.0"
edition = "2024"

[lints.rust]
warnings = "deny"

[features]
default = []
# Prefer vendored/static native libraries while keeping libc dynamically linked.
static-except-libc = [
    "git2/vendored-libgit2",
    "git2/vendored-openssl",
    "git2/zlib-ng-compat",
    "reqwest/native-tls-vendored",
    "rusqlite/bundled",
    "xz2/static",
]

[dependencies]
anyhow = "1.0.103"
ar = "0.9.0"
bzip2 = "0.6.1"
clap = { version = "4.6.0", features = ["derive"] }
flate2 = "1.1.9"
git2 = "0.21.0"
indicatif = "0.18.6"
nix = { version = "0.31.3", features = ["user"] }
rusqlite = "0.40.1"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
yaml-rust2 = "0.11.0"
sha2 = "0.11.0"
tar = "0.4.46"
tempfile = "=3.27.0"
thiserror = "2.0.18"
toml = "1.1.2"
url = "2.5.8"
walkdir = "2.5.0"
xz2 = "0.1.7"
zip = "8.5.0"
zstd = { version = "0.13.3", features = ["zstdmt"] }
inquire = "0.9.4"
md5 = "0.8.0"
suppaftp = "10.0.0"
minisign = "0.9.1"
petgraph = "0.8.3"
fd-lock = "4.0.4"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "native-tls"] }
filetime = "0.2.29"
clap_complete = "4.6.7"
sys-mount = { version = "3.1.0", default-features = false }
time = { version = "0.3.53", features = ["formatting", "parsing"] }
b2sum-rust = "0.3.0"
serde_ignored = "0.1.14"
lz4_flex = "0.13.1"
lzma-rust2 = "0.16.5"
signal-hook = "0.4.4"
sha1 = "0.11.0"

[dev-dependencies]
tempfile = "=3.27.0"
